--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <main>
         <h2>About Me</h2>
         <p>This is a simple HTML website example.</p><br>
-        <p>Created by Mansi Khamkar.</p>
+        <p>Created by Riddhi Sansare.</p>
+        <p>This is milestone 3.</p>
     </main>
     <footer>
         <p>© 2024 My Simple Website</p>
