--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Simple Website</h1>
+        <h1>WELCOME TO MYY SIMPLE WEBSITE</h1>
     </header>
     <main>
         <h2>About Me</h2>
         <p>This is a simple HTML website example.</p><br>
         <p>Created by Riddhi Sansare.</p>
-        <p>This is milestone 3.</p>
+        <p>This is MILESTONE 3.</p>
     </main>
     <footer>
         <p>© 2024 My Simple Website</p>
